--- a/ERecruteApp-front/src/app/profil/profil.component.html
+++ b/ERecruteApp-front/src/app/profil/profil.component.html
@@ -37,15 +37,18 @@
                 <div class="panel panel-default">
                     <div class="panel-body profile">
                         <div class="profile-image">
-                            <img src="{{profil.photo}}" alt="{{profil.nom}} {{profil.prenom}}"/>
+                            <img src="{{profil.photo}}" alt="{{profil.nom}} {{profil.prenom}}"  />
+                            <!--
+                                <img src="{{this.service.host+'/photoProfil/'+profil.codeProfil}}" alt="{{this.service.host+'/photoProfil/'+profil.codeProfil}}" />
+                            -->
                         </div>
                         <div class="profile-data">
                             <div class="profile-data-name">{{profil.nom}} {{profil.prenom}}</div>
                             <div class="profile-data-title">Singer-Songwriter</div>
                         </div>
                         <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-pencil"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-times"></span></a>
+                            <a href="/CV/{{profil.codeProfil" class="profile-control-left"><span class="fa fa-pencil"></span></a>
+                            <a class="profile-control-right"><button class="fa fa-times btn-danger" (click)="deleteProfil(profil)"></button></a>
                         </div>
                     </div>                                
                     <div class="panel-body">                                    
