--- a/ERecruteApp-front/src/app/profil/profil.component.html
+++ b/ERecruteApp-front/src/app/profil/profil.component.html
@@ -22,6 +22,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <button href="/addProfil" class="btn btn-success btn-block"><span class="fa fa-plus"></span> Add new profil</button>
+                                    <button (click)="charger()" class="btn btn-success btn-block"><span class="fa fa-plus"></span> charger de CSV</button>
                                 </div>
                             </div>
                         </form>                                    
